--- a/app/views/appeal/enforcement/v4/task-list__land.html
+++ b/app/views/appeal/enforcement/v4/task-list__land.html
@@ -88,7 +88,7 @@
 
 
       {
-        key: { text: "What is your interest in the land" },
+        key: { text: "What is your interest in the land?" },
         value:
           {
             html:
