--- a/app/views/appeal/enforcement/v4/prepare-appeal/fee-check.html
+++ b/app/views/appeal/enforcement/v4/prepare-appeal/fee-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Did you pay the application fee?' %}
+{% set title = 'Did anyone submit a planning application and pay the correct fee?' %}
 
 {% block questions %}
 
