--- a/app/views/appeal/enforcement/v4/task-list__grounds.html
+++ b/app/views/appeal/enforcement/v4/task-list__grounds.html
@@ -103,7 +103,7 @@
       } if data['supporting-check-b'] == 'Yes',
 
       {
-        key: { text: "Did anyone submit a planning application and pay the correct fee?" },
+        key: { text: "Did anyone submit a planning application for the development on the enforcement notice and pay the correct fee?" },
         value:
           { html: data['fee-check'] or 'No' }
           if data['fee-check-complete'] else
