--- a/app/views/appeal/enforcement/v4/prepare-appeal/decision-upload.html
+++ b/app/views/appeal/enforcement/v4/prepare-appeal/decision-upload.html
@@ -11,13 +11,19 @@
 {% block questions %}
       <form method="post">
         <h1 class="govuk-heading-l">
-          Upload your application fee receipt
+          Upload the decision letter from the local planning authority
         </h1>
+
+        <p class="govuk-body">This letter tells you about the decision on your application.</p>
+
+        <p class="govuk-body">We need the letter from the local planning authority that tells you their decision on your application (also called a 'decision notice').</p>
+
+        <p class="govuk-body">Do not upload the planning officer's report.</p>
 
         {% set uploadHtml %}
           {{ govukFileUpload({
-            id: "fee-receipt",
-            name: "fee-receipt",
+            id: "decision-upload",
+            name: "decision-upload",
             classes: 'moj-multi-file-upload__input',
             label: {
               text: "Drag and drop or choose files",
