--- a/app/views/appeal/enforcement/v4/prepare-appeal/description-of-land.html
+++ b/app/views/appeal/enforcement/v4/prepare-appeal/description-of-land.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Enter the description of the land' %}
+{% set title = 'Enter the description of development' %}
 
 {% block questions %}
 
