--- a/app/views/appeal/enforcement/v1-statement/enter-statement.html
+++ b/app/views/appeal/enforcement/v1-statement/enter-statement.html
@@ -76,7 +76,7 @@
             classes: "govuk-label--m"
           },
           hint: {
-            text: "You should address each item separately, dealing with legal matters first"
+            text: "Address each item separately, dealing with legal matters first"
           }
         }) }}
 
