--- a/app/views/appeal/enforcement/v4/task-list__upload.html
+++ b/app/views/appeal/enforcement/v4/task-list__upload.html
@@ -21,6 +21,25 @@
   {{ govukSummaryList({
     classes: "govuk-!-margin-bottom-9",
     rows: [
+
+      {
+        key: {
+          text: "Communication with the Planning Inspectorate"
+        },
+        value:
+          { html: "<a href='#'>comms.pdf</a>" }
+          if data['upload-comms-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+          { href: 'upload-documents/upload-comms?cya=true', html: 'Change' }
+          if data['upload-comms-complete'] else
+          { href: 'upload-documents/upload-comms', html: 'Answer' }
+        
+          ]
+        }
+      },
+
       {
         key: {
           text: "Enforcement notice"
@@ -57,6 +76,21 @@
       },
 
       {
+        key: { text: "Application form" },
+        value:
+          { html: data['application-upload'] or '<a href="#">application.pdf</a>' }
+          if data['application-upload-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'upload-documents/application-upload?cya=true', html: 'Change' }
+            if data['application-upload-complete'] else
+            { href: 'upload-documents/application-upload', html: 'Answer' }
+          ]
+        }
+      } if data['fee-check'] == 'Yes',
+
+      {
         key: {
           text: "Agreement to change the description of development"
         },
@@ -75,6 +109,22 @@
 
 
       {
+        key: { text: "Decision letter from the local planning authority" },
+        value:
+          { html: data['decision-upload'] or '<a href="#">decision.pdf</a>' }
+          if data['decision-upload-complete'] else
+          { html: '<span class="govuk-hint">Not started</span>' },
+        actions: {
+          items: [
+            { href: 'upload-documents/decision-upload?cya=true', html: 'Change' }
+            if data['decision-upload-complete'] else
+            { href: 'upload-documents/decision-upload', html: 'Answer' }
+          ]
+        }
+      } if data['granted-or-refused'] == 'Granted with conditions' or data['granted-or-refused'] == 'Refused',
+
+
+      {
         key: { text: "Do you plan to submit a planning obligation to support your appeal?" },
         value:
           { html: data['planning-obligation-check'] or 'No' }
@@ -87,7 +137,8 @@
             { href: 'upload-documents/planning-obligation-check', html: 'Answer' }
           ]
         }
-      },
+      } if data['grounds'] and 'groundA' in data['grounds'],
+
 
       {
         key: { text: "What is the status of your planning obligation?" },
@@ -104,6 +155,7 @@
         }
       } if data['planning-obligation-check'] == 'Yes',
       
+
       {
         key: { text: "Planning obligation" },
         value:
@@ -149,6 +201,7 @@
         }
       } if data['costs-check'] == 'Yes',
 
+
       {
         key: { text: "Do you have any other new documents to support your appeal?" },
         value:
@@ -178,7 +231,6 @@
         }
       } if data['other-check'] == 'Yes'
 
-      
 
     ]
   }) }}
