--- a/app/views/appeal/enforcement/v4/upload-documents/upload-comms.html
+++ b/app/views/appeal/enforcement/v4/upload-documents/upload-comms.html
@@ -16,17 +16,18 @@
 
         <p class="govuk-body">For example, the email you sent to confirm that you will appeal against the enforcement notice.</p>
 
+
         {% set uploadHtml %}
           {{ govukFileUpload({
-            id: "supporting-docs",
-            name: "_supporting-docs",
+            id: "comms-upload",
+            name: "comms-upload",
             classes: 'moj-multi-file-upload__input',
             label: {
-              text: "Upload a file",
+              text: "Drag and drop or choose files",
               classes: 'govuk-label--m'
             },
             hint: {
-              text: 'The files must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 25MB'
+              text: 'The files must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 15MB'
             },
             attributes: { multiple: '' }
           }) }}
@@ -49,11 +50,16 @@
           text: "Continue"
         }) }}
 
+        <p class="govuk-body">
+          <a href="../task-list" class="govuk-link--no-visited-state">
+            Return to your appeal
+          </a>
+        </p>
+
       </form>
 
 
 {% endblock %}
-
 
 {% block pageScripts %}
   <script>
@@ -62,7 +68,7 @@
       e.preventDefault();
 
       $('.moj-multi-file-upload__filename').each(function() {
-        $('<input name="supporting-docs" type="checkbox" value="'+ $(this).text() +'" checked="true" style="display: none">').insertBefore('.govuk-heading-l');
+        $('<input name="comms-upload" type="checkbox" value="'+ $(this).text() +'" checked="true" style="display: none">').insertBefore('.govuk-heading-l');
       });
 
       $(this).unbind('submit').submit();
