--- a/app/views/appeal/enforcement/v4/before-you-start/effective-date.html
+++ b/app/views/appeal/enforcement/v4/before-you-start/effective-date.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = 'What is the effective date on your enforcement notice' %}
+{% set title = 'What is the effective date on your enforcement notice?' %}
 
 {% block questions %}
   {{ govukDateInput({
