--- a/app/views/manage/appeals/search/v2/decided-search-applied.html
+++ b/app/views/manage/appeals/search/v2/decided-search-applied.html
@@ -2,7 +2,7 @@
 
 
 {% set pageName = "Home" %}
-{% set currentPage = "home" %}
+{% set currentPage = "decided-search-applied" %}
 
 {% block backLink %}{% endblock %}
 
@@ -23,7 +23,7 @@
 
         <h3 class="govuk-heading-m govuk-!-margin-top-0">Search</h3>
         <div id="event-name-hint" class="govuk-hint">
-            You can search by appeal reference, planning application reference or postcode (including spaces)
+            You can search by appeal reference, planning application reference or first line of address
         </div>
 
         <form class="govuk-form-group" style="display: flex; gap: 8px; align-items: center; margin-bottom: 0px;">
@@ -45,23 +45,8 @@
         <div class="govuk-grid-column-full">
 
 
-            {{ xGovukSecondaryNavigation({
-                visuallyHiddenTitle: "Secondary menu",
-                items: [{
-                text: "Active (2)",
-                href: "active-search-applied"
-                }, {
-                text: "Waiting for review (0)",
-                href: "wfr-search-applied"
-                }, {
-                text: "Decided (0)",
-                href: "decided-search-applied",
-                current: true
-                }, {
-                text: "Withdrawn (0)",
-                href: "withdrawn-search-applied"
-                }]
-                }) }}
+            {% include "./_includes/secondary-nav-with-search.html" %}
+
 
             {# Size modifiers: xl, l, m #}
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break">
