--- a/app/views/manage/appeals/search/v2/decided.html
+++ b/app/views/manage/appeals/search/v2/decided.html
@@ -2,7 +2,7 @@
 
 
 {% set pageName = "Home" %}
-{% set currentPage = "home" %}
+{% set currentPage = "decided" %}
 
 {% block backLink %}{% endblock %}
 
@@ -23,7 +23,7 @@
 
         <h3 class="govuk-heading-m govuk-!-margin-top-0">Search</h3>
         <div id="event-name-hint" class="govuk-hint">
-            You can search by appeal reference, planning application reference or postcode (including spaces)
+            You can search by appeal reference, planning application reference or first line of address
         </div>
 
         <form class="govuk-form-group" style="display: flex; gap: 8px; align-items: center; margin-bottom: 0px;"
@@ -47,24 +47,8 @@
 
         <div class="govuk-grid-column-full">
 
+            {% include "./_includes/secondary-nav.html" %}
 
-            {{ xGovukSecondaryNavigation({
-                visuallyHiddenTitle: "Secondary menu",
-                items: [{
-                text: "Active (31)",
-                href: "active"
-                }, {
-                text: "Waiting for review (8)",
-                href: "waiting-for-review"
-                }, {
-                text: "Decided (53)",
-                href: "decided",
-                current: true
-                }, {
-                text: "Withdrawn (1)",
-                href: "withdrawn"
-                }]
-                }) }}
 
             {# Size modifiers: xl, l, m #}
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break">
