--- a/app/views/manage/questionnaire-elb/index.html
+++ b/app/views/manage/questionnaire-elb/index.html
@@ -29,6 +29,7 @@
         text: 'In progress'
       }) }}
     </h2>
+    <p class="govuk-body">This currently duplicates the enforcement questionnaire prototype. Further changes are expected, but the requirements have not yet been confirmed.</p>
 
     {{ govukButton({
       html: 'View prototype',
