--- a/app/views/manage/appeals/search/index.html
+++ b/app/views/manage/appeals/search/index.html
@@ -11,7 +11,7 @@
 
   
       <h2 class="govuk-heading-m">
-        Latest version
+        Version 2 (latest)
         {{govukTag({
             text: "In progress",
             classes: "govuk-!-margin-left-2 govuk-tag--blue"
