--- a/app/views/manage/appeals/search/v2/invalid-search-applied.html
+++ b/app/views/manage/appeals/search/v2/invalid-search-applied.html
@@ -30,7 +30,7 @@
             action="invalid-applied" method="get">
 
             <input class="govuk-input" id="keyword-search" name="keyword-search" type="text" autocomplete="off"
-                style="margin-bottom: 0; width:100%;">
+                style="margin-bottom: 0; width:100%;" value="1345301">
 
             <button class="govuk-button" id="keyword-search-button" type="submit" style="margin-bottom: 0;">
                 Search
