--- a/app/views/appeal/enforcement/v4/task-list__land.html
+++ b/app/views/appeal/enforcement/v4/task-list__land.html
@@ -47,7 +47,7 @@
 
 
       {
-        key: { text: "Is the appeal site your contact address?" },
+        key: { text: "Is the appeal site address your contact address?" },
         value:
           {
             html:
@@ -66,7 +66,7 @@
 
 
       {
-        key: { text: "Contact address" },
+        key: { text: "What is your contact address?" },
         value:
           {
             html:
